--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
 <body>
     <div class="div"></div>
-    <br><br><br><br><br><br><br><br><br><br>
-    <center><p id="demo" style="font-family: Javanese Text; font-size: 68px;"></p></center>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Gadsden_flag.svg/1200px-Gadsden_flag.svg.png">
 </body>
 
 <script>
