--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <title>|</title>
 <link rel="icon" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEX/AAAZ4gk3AAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC">
 
@@ -13,18 +14,16 @@
     html { overflow-y: hidden; }
 </style>
 
-<body>
+<body bgcolor="#F5DC00">
     <div class="div"></div>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Gadsden_flag.svg/1200px-Gadsden_flag.svg.png">
+    <center><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Gadsden_flag.svg/1200px-Gadsden_flag.svg.png" width="965"></center>
 </body>
 
 <script>
     // Set the date we're counting down to
 var countDownDate = new Date("Nov 20, 2019 14:30:00").getTime();
-
 // Update the count down every 1 second
 var x = setInterval(function() {
-
   // Get today's date and time
   var now = new Date().getTime();
     
